--- a/index.html
+++ b/index.html
@@ -28,45 +28,9 @@
         <section>
             <ul>
                 <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-                <li><img src="./images/Vector.svg" alt="Антена"></li>
-                <li><img src="./images/Vector1.svg" alt="Круг в антене"></li>
-                <li><img src="./images/Rectangle.png" alt="Фон антены"></li>
                 <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-                <li><img src="./images/Clock.svg" alt="Часы"></li>
-                <li><img src="./images/HourHeight.svg" alt="Время вертикали"></li>
-                <li><img src="./images/HourWidth1.svg" alt="Время горизонтали1"></li>
-                <li><img src="./images/HourWidth2.svg" alt="Время горизонтали2"></li>
-                <li><img src="./images/ClockBG.png" alt="Фон часов"></li>
-                <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-                <li><img src="./images/PC.svg" alt="Компьютер"></li>
-                <li><img src="./images/Line1.svg" alt="Линия графика1"></li>
-                <li><img src="./images/Line2.svg" alt="Линия графика2"></li>
-                <li><img src="./images/Line3.svg" alt="Линия графика3"></li>
-                <li><img src="./images/Line4.svg" alt="Линия графика4"></li>
-                <li><img src="./images/PCbgr.png" alt="Фон компьютера"></li>
+                <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p><li>
                 <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
-                <li><img src="./images/spaceman.svg" alt="Космонавт"></li>
-                <li><img src="./images/spacemanBG.png" alt=""></li>
-                <li><img src="./images/star.svg" alt=""></li>
-                <li><img src="./images/square.svg" alt=""></li>
-                <li><img src="./images/reflection1.svg" alt=""></li>
-                <li><img src="./images/reflection2.svg" alt=""></li>
-                <li><img src="./images/Vector(0).svg" alt=""></li>
-                <li><img src="./images/Vector(1).svg" alt=""></li>
-                <li><img src="./images/Vector(2).svg" alt=""></li>
-                <li><img src="./images/Vector(3).svg" alt=""></li>
-                <li><img src="./images/Vector(4).svg" alt=""></li>
-                <li><img src="./images/Vector(5).svg" alt=""></li>
-                <li><img src="./images/Vector(6).svg" alt=""></li>
-                <li><img src="./images/Vector(7).svg" alt=""></li>
-                <li><img src="./images/Vector(8).svg" alt=""></li>
-                <li><img src="./images/Vector(9).svg" alt=""></li>
-                <li><img src="./images/Vector(10).svg" alt=""></li>
-                <li><img src="./images/Vector(11).svg" alt=""></li>
-                <li><img src="./images/Vector(12).svg" alt=""></li>
-                <li><img src="./images/Vector(13).svg" alt=""></li>
-                <li><img src="./images/Vector(14).svg" alt=""></li>
-                <li><img src="./images/Vector(15).svg" alt=""></li>
             </ul>
         </section>
         <section>
