--- a/index.html
+++ b/index.html
@@ -12,37 +12,44 @@
         <nav>
             <a href="/"><img src="./images/WebStudio.svg" alt="Логотип"></a>
             <ul>
-                <li><a href=""target=_blank>Студия</a></li>
-                <li><a href=""target=_blank>Портфолио</a></li>
-                <li><a href=""target=_blank>Контакты</a></li>
+                <li><a href="" target=_blank>Студия</a></li>
+                <li><a href="" target=_blank>Портфолио</a></li>
+                <li><a href="" target=_blank>Контакты</a></li>
+                <li><img src="./images/envelope.svg" alt=""> <a href="" target=_blank>info@devstudio.com</a></li>
+                <li><img src="./images/Tel.svg" alt=""></li>
             </ul>
         </nav>
     </header>
     <div>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href=""target=_blank>Заказать услугу</a>
+            <a href="" target=_blank>Заказать услугу</a>
         </section>
     </div>
     <main>
         <section>
-            
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <p>Десктопные приложения</p>
+                    <h3>Десктопные приложения</h3>
                     <img src="./images/img(1).jpg" alt="">
                     <img src="./images/bg_1.jpg" alt="">
                 </li>
                 <li>
-                    <p>Мобильные приложения</p>
+                    <h3>Мобильные приложения</h3>
                     <img src="./images/img(2).jpg" alt="">
                     <img src="./images/bg_2.jpg" alt="">
                 </li>
                 <li>
-                    <p>Дизайнерские решения</p>
+                    <h3>Дизайнерские решения</h3>
                     <img src="./images/img(3).jpg" alt="">
                     <img src="./images/bg_3.jpg" alt="">
                 </li>
@@ -50,55 +57,56 @@
         </section>
         <section>
             <h2>Наша команда</h2>
-                    <p>Николай Кучеренко</p>
+                    <h3>Николай Кучеренко</h3>
+                    <p>Product Designer</p>
                     <img src="./images/img01.jpg" alt="">
                     <img src="./images/cardbg1.svg" alt="">
-                    <img src="./images/ProductDesigner.svg" alt="">
                     <ul>
-                        <li><a href="https://www.instagram.com/?hl=ru"target=_blank>Instgram</a></li>
-                        <li><a href="https://twitter.com/explore"target=_blank>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE"target=_blank>Facebook</a></li>
-                        <li><a href=""target=_blank>IN</a></li>
+                        <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
+                        <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
+                        <li><a href="" target=_blank>IN</a></li>
                     </ul>
-                    <p>Ольга Иванова</p>
+                    <h3>Ольга Иванова</h3>
+                    <p>Frontend Developer</p>
                     <img src="./images/ОльгаИванова.jpg" alt="">
                     <img src="./images/Olgabg.svg" alt="">
-                    <img src="./images/FrontendDeveloper.svg" alt="">
                     <ul>
-                        <li><a href="https://www.instagram.com/?hl=ru"target=_blank>Instgram</a></li>
-                        <li><a href="https://twitter.com/explore"target=_blank>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE"target=_blank>Facebook</a></li>
-                        <li><a href=""target=_blank>IN</a></li>
+                        <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
+                        <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
+                        <li><a href="" target=_blank>IN</a></li>
                     </ul>
-                    <p>Андрей Шевченко</p>
+                    <h3>Андрей Шевченко</h3>
+                    <p>Marketing</p>
                     <img src="./images/АндрейШевченко.jpg" alt="">
                     <img src="./images/Andreybg.svg" alt="">
-                    <img src="./images/Marketing.svg" alt="">
                     <ul>
-                        <li><a href="https://www.instagram.com/?hl=ru"target=_blank>Instgram</a></li>
-                        <li><a href="https://twitter.com/explore"target=_blank>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE"target=_blank>Facebook</a></li>
-                        <li><a href=""target=_blank>IN</a></li>
+                        <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
+                        <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
+                        <li><a href="" target=_blank>IN</a></li>
                     </ul>
-                    <p>Иван Николаев</p>
+                    <h3>Иван Николаев</h3>
+                    <p>UI Designer</p>
                     <img src="./images/ИванНиколаев.jpg" alt="">
                     <img src="./images/Ivanbg.svg" alt="">
-                    <img src="./images/UIDesigner.svg" alt="">
                     <ul>
-                        <li><a href="https://www.instagram.com/?hl=ru"target=_blank>Instgram</a></li>
-                        <li><a href="https://twitter.com/explore"target=_blank>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE"target=_blank>Facebook</a></li>
-                        <li><a href=""target=_blank>IN</a></li>
+                        <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
+                        <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
+                        <li><a href="" target=_blank>IN</a></li>
                     </ul>
         </section>
         <section>
+            <h2>Постоянные клиенты</h2>
             <ul>
-                <li><a href=""target=_blank><img src="./images/logo1.svg" alt=""><img src="./images/logobg1.svg" alt=""></a></li>
-                <li><a href=""target=_blank><img src="./images/logo2.svg" alt=""><img src="./images/logobg2.svg" alt=""></a></li>
-                <li><a href=""target=_blank><img src="./images/logo3.svg" alt=""><img src="./images/logobg3.svg" alt=""></a></li>
-                <li><a href=""target=_blank><img src="./images/logo4.svg" alt=""><img src="./images/logobg4.svg" alt=""></a></li>
-                <li><a href=""target=_blank><img src="./images/logo5.svg" alt=""><img src="./images/logobg5.svg" alt=""></a></li>
-                <li><a href=""target=_blank><img src="./images/logo6.svg" alt=""><img src="./images/logobg6.svg" alt=""></a></li>
+                <li><a href="" target=_blank><img src="./images/logo1.svg" alt=""><img src="./images/logobg1.svg" alt=""></a></li>
+                <li><a href="" target=_blank><img src="./images/logo2.svg" alt=""><img src="./images/logobg2.svg" alt=""></a></li>
+                <li><a href="" target=_blank><img src="./images/logo3.svg" alt=""><img src="./images/logobg3.svg" alt=""></a></li>
+                <li><a href="" target=_blank><img src="./images/logo4.svg" alt=""><img src="./images/logobg4.svg" alt=""></a></li>
+                <li><a href="" target=_blank><img src="./images/logo5.svg" alt=""><img src="./images/logobg5.svg" alt=""></a></li>
+                <li><a href="" target=_blank><img src="./images/logo6.svg" alt=""><img src="./images/logobg6.svg" alt=""></a></li>
             </ul>
         </section>
     </main>
