--- a/index.html
+++ b/index.html
@@ -28,11 +28,32 @@
     </div>
     <main>
         <section>
+            <h2></h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <img src="./images/antenna.svg" alt="">
+                    <img src="./images/antennaBG.png" alt="">
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <img src="./images/clock.svg" alt="">
+                    <img src="./images/clockBG.png" alt="">
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <img src="./images/diagram.svg" alt="">
+                    <img src="./images/diagramBG.png" alt="">
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <img src="./images/astronaut.svg" alt="">
+                    <img src="./images/astronautBG.png" alt="">
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
             </ul>
         </section>
         <section>
@@ -41,17 +62,14 @@
                 <li>
                     <h3>Десктопные приложения</h3>
                     <img src="./images/img(1).jpg" alt="">
-                    <img src="./images/bg_1.jpg" alt="">
                 </li>
                 <li>
                     <h3>Мобильные приложения</h3>
                     <img src="./images/img(2).jpg" alt="">
-                    <img src="./images/bg_2.jpg" alt="">
                 </li>
                 <li>
                     <h3>Дизайнерские решения</h3>
                     <img src="./images/img(3).jpg" alt="">
-                    <img src="./images/bg_3.jpg" alt="">
                 </li>
             </ul>
         </section>
@@ -60,7 +78,6 @@
                     <h3>Николай Кучеренко</h3>
                     <p>Product Designer</p>
                     <img src="./images/img01.jpg" alt="">
-                    <img src="./images/cardbg1.svg" alt="">
                     <ul>
                         <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
                         <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
@@ -70,7 +87,6 @@
                     <h3>Ольга Иванова</h3>
                     <p>Frontend Developer</p>
                     <img src="./images/ОльгаИванова.jpg" alt="">
-                    <img src="./images/Olgabg.svg" alt="">
                     <ul>
                         <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
                         <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
@@ -80,7 +96,6 @@
                     <h3>Андрей Шевченко</h3>
                     <p>Marketing</p>
                     <img src="./images/АндрейШевченко.jpg" alt="">
-                    <img src="./images/Andreybg.svg" alt="">
                     <ul>
                         <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
                         <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
@@ -90,7 +105,6 @@
                     <h3>Иван Николаев</h3>
                     <p>UI Designer</p>
                     <img src="./images/ИванНиколаев.jpg" alt="">
-                    <img src="./images/Ivanbg.svg" alt="">
                     <ul>
                         <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
                         <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
