--- a/index.html
+++ b/index.html
@@ -11,53 +11,53 @@
     <header>
         <nav>
             <a href="/"><img src="./images/WebStudio.svg" alt="Логотип"></a>
-            <ul>
-                <li><a href="" target=_blank>Студия</a></li>
-                <li><a href="" target=_blank>Портфолио</a></li>
-                <li><a href="" target=_blank>Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="" target=_blank class="link">Студия</a></li>
+                <li><a href="" target=_blank class="link">Портфолио</a></li>
+                <li><a href="" target=_blank class="link">Контакты</a></li>
                 <li><img src="./images/envelope.svg" alt=""> <a href="" target=_blank>info@devstudio.com</a></li>
                 <li><img src="./images/Tel.svg" alt=""></li>
             </ul>
         </nav>
     </header>
     <div>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <a href="" target=_blank>Заказать услугу</a>
         </section>
     </div>
     <main>
-        <section>
+        <section class="section">
             <h2></h2>
             <ul>
                 <li>
                     <img src="./images/antenna.svg" alt="">
                     <img src="./images/antennaBG.png" alt="">
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="section-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <img src="./images/clock.svg" alt="">
                     <img src="./images/clockBG.png" alt="">
-                    <h3>Пунктуальность</h3>
+                    <h3 class="section-title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <img src="./images/diagram.svg" alt="">
                     <img src="./images/diagramBG.png" alt="">
-                    <h3>Планирование</h3>
+                    <h3 class="section-title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <img src="./images/astronaut.svg" alt="">
                     <img src="./images/astronautBG.png" alt="">
-                    <h3>Современные технологии</h3>
+                    <h3 class="section-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <h3>Десктопные приложения</h3>
@@ -73,9 +73,9 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-                    <h3>Николай Кучеренко</h3>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+                    <h3 class="section-title">Николай Кучеренко</h3>
                     <p>Product Designer</p>
                     <img src="./images/img01.jpg" alt="">
                     <ul>
@@ -84,7 +84,7 @@
                         <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
                         <li><a href="" target=_blank>IN</a></li>
                     </ul>
-                    <h3>Ольга Иванова</h3>
+                    <h3 class="section-title">Ольга Иванова</h3>
                     <p>Frontend Developer</p>
                     <img src="./images/ОльгаИванова.jpg" alt="">
                     <ul>
@@ -93,7 +93,7 @@
                         <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
                         <li><a href="" target=_blank>IN</a></li>
                     </ul>
-                    <h3>Андрей Шевченко</h3>
+                    <h3 class="section-title">Андрей Шевченко</h3>
                     <p>Marketing</p>
                     <img src="./images/АндрейШевченко.jpg" alt="">
                     <ul>
@@ -102,7 +102,7 @@
                         <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
                         <li><a href="" target=_blank>IN</a></li>
                     </ul>
-                    <h3>Иван Николаев</h3>
+                    <h3 class="section-title">Иван Николаев</h3>
                     <p>UI Designer</p>
                     <img src="./images/ИванНиколаев.jpg" alt="">
                     <ul>
@@ -112,8 +112,8 @@
                         <li><a href="" target=_blank>IN</a></li>
                     </ul>
         </section>
-        <section>
-            <h2>Постоянные клиенты</h2>
+        <section class="section">
+            <h2 class="section-title">Постоянные клиенты</h2>
             <ul>
                 <li><a href="" target=_blank><img src="./images/logo1.svg" alt=""><img src="./images/logobg1.svg" alt=""></a></li>
                 <li><a href="" target=_blank><img src="./images/logo2.svg" alt=""><img src="./images/logobg2.svg" alt=""></a></li>
