--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
                 <li><a href="" target=_blank class="link">Студия</a></li>
                 <li><a href="" target=_blank class="link">Портфолио</a></li>
                 <li><a href="" target=_blank class="link">Контакты</a></li>
-                <li><img src="./images/envelope.svg" alt=""> <a href="" target=_blank>info@devstudio.com</a></li>
-                <li><img src="./images/Tel.svg" alt=""></li>
             </ul>
         </nav>
+        <ul>
+            <li><img src="./images/envelope.svg" alt=""> <a href="" target=_blank>info@devstudio.com</a></li>
+                <li><img src="./images/Tel.svg" alt=""></li>
+        </ul>
     </header>
     <div>
         <section class="hero">
@@ -32,25 +34,21 @@
             <ul>
                 <li>
                     <img src="./images/antenna.svg" alt="">
-                    <img src="./images/antennaBG.png" alt="">
                     <h3 class="section-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <img src="./images/clock.svg" alt="">
-                    <img src="./images/clockBG.png" alt="">
                     <h3 class="section-title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <img src="./images/diagram.svg" alt="">
-                    <img src="./images/diagramBG.png" alt="">
                     <h3 class="section-title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <img src="./images/astronaut.svg" alt="">
-                    <img src="./images/astronautBG.png" alt="">
+                    <img src="./images/astronaut.svg" alt="">    
                     <h3 class="section-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -61,15 +59,15 @@
             <ul>
                 <li>
                     <h3>Десктопные приложения</h3>
-                    <img src="./images/img(1).jpg" alt="">
+                    <img src="./images/img(1).jpg" alt="" width="370">
                 </li>
                 <li>
                     <h3>Мобильные приложения</h3>
-                    <img src="./images/img(2).jpg" alt="">
+                    <img src="./images/img(2).jpg" alt="" width="370">
                 </li>
                 <li>
                     <h3>Дизайнерские решения</h3>
-                    <img src="./images/img(3).jpg" alt="">
+                    <img src="./images/img(3).jpg" alt="" width="370">
                 </li>
             </ul>
         </section>
