--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <a href="/"><img src="./images/WebStudio.svg" alt="Логотип"></a>
             <ul class="site-nav list">
-                <li><a href="" target=_blank class="link">Студия</a></li>
-                <li><a href="" target=_blank class="link">Портфолио</a></li>
+                <li><a href="index.html" target=_blank class="link current">Студия</a></li>
+                <li><a href="portfolio.html" target=_blank class="link">Портфолио</a></li>
                 <li><a href="" target=_blank class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -25,7 +25,7 @@
     <div>
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <a href="" target=_blank>Заказать услугу</a>
+            <a class="button primary" href="" target=_blank>Заказать услугу</a>
         </section>
     </div>
     <main>
@@ -122,7 +122,23 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <a href="/"><img src="./images/WebStudio.svg" alt="Логотип"></a>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p>info@example.com</p>
+            <p>+38 099 111 11 11</p>
+        </div>
+        <div>
+            <h3>присоединяйтесь</h3>
+            <ul>
+                <li><a href="https://www.instagram.com/?hl=ru" target=_blank>Instgram</a></li>
+                <li><a href="https://twitter.com/explore" target=_blank>Twitter</a></li>
+                <li><a href="https://www.facebook.com/campaign/landing.php?campaign_id=1600506868&extra_1=s%7Cc%7C303839676198%7Ce%7Cfacebook%7C&placement=&creative=303839676198&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1600506868%26adgroupid%3D60825658456%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9061020%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=CjwKCAjwjLD4BRAiEiwAg5NBFtguiMSLvXgGRlx7NWDnHO7qBOjqMM1xP7AW2_6qaOmT_vZ8aqdPcxoCaqUQAvD_BwE" target=_blank>Facebook</a></li>
+                <li><a href="" target=_blank>IN</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
