Добавляет CSS и страничку портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,84 @@
                 <li><img src="./images/Tel.svg" alt=""></li>
         </ul>
     </header>
+    <main>
+        <section>
+            <h1 hidden>Наши работы</h1>
+            <div>
+                <button type="button">Все</button>
+                <button type="button">Веб-сайты</button>
+                <button type="button">Приложения</button>
+                <button type="button">Дизайн</button>
+                <button type="button">Маркетинг</button>
+            </div>
+            <ul>
+                <li>
+                    <a href="">
+                    <img src="" alt="">
+                    <h2>Технокряк</h2>
+                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/neworlean.jpg" alt="">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/seafood.jpg" alt="">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/prime.jpg" alt="">
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/boxes.jpg" alt="">
+                    <h2>Проект Boxes</h2>
+                    <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/inspiration.jpg" alt="">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/LE.jpg" alt="">
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/lab.jpg" alt="">
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="./images/business.jpg" alt="">
+                    <h2>Growing Business</h2>
+                    <p>Приложение</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <div>
             <a href="/"><img src="./images/WebStudio.svg" alt="Логотип"></a>
