--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <main>
         <section class="section">
-            <h2></h2>
+            <h2 hidden>Функции</h2>
             <ul>
                 <li>
                     <img src="./images/antenna.svg" alt="">
