--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,13 @@
     <main>
         <section>
             <h1 hidden>Наши работы</h1>
-            <div>
-                <button type="button">Все</button>
-                <button type="button">Веб-сайты</button>
-                <button type="button">Приложения</button>
-                <button type="button">Дизайн</button>
-                <button type="button">Маркетинг</button>
-            </div>
+            <ul>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
             <ul>
                 <li>
                     <a href="">
